Add service price calculation